[gd_scene load_steps=11 format=2]

[ext_resource path="res://Level.tscn" type="PackedScene" id=1]
[ext_resource path="res://BossEnemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Door.tscn" type="PackedScene" id=3]
[ext_resource path="res://Metroidvania Resources/Door Connections/01_link_02.tres" type="Resource" id=4]
[ext_resource path="res://Trigger.tscn" type="PackedScene" id=5]
[ext_resource path="res://Trigger.gd" type="Script" id=6]
[ext_resource path="res://TileMap.tscn" type="PackedScene" id=7]
[ext_resource path="res://Level_002.gd" type="Script" id=8]
[ext_resource path="res://Spikes.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 27 )

[node name="Level_002" instance=ExtResource( 1 )]
script = ExtResource( 8 )

[node name="TileMap" parent="." index="0"]
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 2, -65517, 0, 0, -65516, 0, 2, 65535, 0, 65536, 0, 0, 65538, 19, 0, 65536, 20, 0, 65538, 131071, 0, 65536, 65536, 0, 65538, 65555, 0, 65536, 65556, 0, 65538, 196607, 0, 65536, 131072, 0, 65538, 131090, 0, 0, 131091, 0, 131078, 131092, 0, 65538, 262143, 0, 65536, 196608, 0, 131077, 196609, 0, 2, 196626, 0, 131072, 196627, 0, 65542, 196628, 0, 65538, 327679, 0, 65536, 262144, 0, 65537, 262145, 0, 65538, 262163, 0, 131072, 262164, 0, 65543, 393215, 0, 65536, 327680, 0, 65541, 327681, 0, 131074, 327700, 0, 65539, 458751, 0, 65536, 393216, 0, 65538, 393236, 0, 65539, 524287, 0, 131072, 458752, 0, 131074, 458771, 0, 196608, 458772, 0, 196615, 589831, 0, 0, 589832, 0, 1, 589833, 0, 2, 720895, 0, 0, 655360, 0, 1, 655361, 0, 1, 655362, 0, 1, 655363, 0, 1, 655364, 0, 1, 655365, 0, 1, 655366, 0, 1, 655367, 0, 131078, 655368, 0, 65537, 655369, 0, 131077, 655370, 0, 1, 655371, 0, 2, 655376, 0, 0, 655377, 0, 1, 655378, 0, 1, 655379, 0, 1, 655380, 0, 2, 786431, 0, 131072, 720896, 0, 131073, 720897, 0, 131073, 720898, 0, 131073, 720899, 0, 131073, 720900, 0, 131073, 720901, 0, 131073, 720902, 0, 131073, 720903, 0, 131073, 720904, 0, 131073, 720905, 0, 131073, 720906, 0, 131073, 720907, 0, 196613, 720908, 0, 196609, 720909, 0, 196609, 720910, 0, 196609, 720911, 0, 196609, 720912, 0, 196614, 720913, 0, 131073, 720914, 0, 131073, 720915, 0, 131073, 720916, 0, 131074 )

[node name="BossEnemy" parent="." index="1" instance=ExtResource( 2 )]
position = Vector2( 158, 56 )
MAX_SPEED = 75

[node name="Door" parent="." index="2" instance=ExtResource( 3 )]
position = Vector2( 0, 144 )
scale = Vector2( -1, 1 )
connection = ExtResource( 4 )
new_level_path = "res://Level_01.tscn"

[node name="Trigger" parent="." index="3" instance=ExtResource( 5 )]
position = Vector2( 22, 145 )
script = ExtResource( 6 )

[node name="CollisionShape2D" parent="Trigger" index="0"]
shape = SubResource( 1 )

[node name="BlockDoor" parent="." index="4" instance=ExtResource( 7 )]
collision_layer = 0
tile_data = PoolIntArray( 589823, 0, 0, 524288, 0, 2, 655359, 0, 131072, 589824, 0, 131074 )

[node name="Spikes" parent="." index="5" instance=ExtResource( 9 )]
position = Vector2( 304, 107 )
rotation = -1.5708

[node name="Spikes2" parent="." index="6" instance=ExtResource( 9 )]
position = Vector2( 32, 98 )
rotation = 1.5708

[node name="Spikes3" parent="." index="7" instance=ExtResource( 9 )]
position = Vector2( 192, 160 )

[node name="Spikes4" parent="." index="8" instance=ExtResource( 9 )]
position = Vector2( 258, 144 )

[node name="Spikes5" parent="." index="9" instance=ExtResource( 9 )]
position = Vector2( 80, 144 )
[connection signal="died" from="BossEnemy" to="." method="_on_BossEnemy_died"]
[connection signal="area_triggered" from="Trigger" to="." method="_on_Trigger_area_triggered"]
[connection signal="body_entered" from="Trigger" to="Trigger" method="_on_Trigger_body_entered"]

[editable path="Trigger"]
